Fixed Scroll Issue On Mobile Devices

--- a/src/index.css
+++ b/src/index.css
@@ -86,14 +86,18 @@ button {
 }
 
 .pageContainer,
-.offers,
 .profile,
 .listingDetails,
 .category,
 .explore {
   margin: 1rem;
-  height: 110vh;
+  height: 108vh;
 }
+
+.offers {
+  margin: 1rem;
+}
+
 @media (min-width: 1024px) {
   .pageContainer,
   .offers,
@@ -804,7 +808,7 @@ button {
 }
 
 .createListingButton {
-  margin-top: 5rem;
+  margin-top: 1.1rem;
 }
 
 .offers {
